--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,6 +9,12 @@
     "theme_color": "#00897B",
     "icons": [
         {
+            "src": "/img/maskable_icon.png",
+            "sizes": "512x512",
+            "type": "image/png",
+            "purpose": "any maskable"
+        },
+        {
             "src": "/img/icon-128x128.png",
             "sizes": "128x128",
             "type": "image/png"
